fixed flex align for buttonlist

--- a/client/src/components/Lists/styles/ButtonList.css
+++ b/client/src/components/Lists/styles/ButtonList.css
@@ -8,3 +8,10 @@
     padding: 0;
 
 }
+
+.button-project-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
